--- a/config/examples/mot_highway.yaml
+++ b/config/examples/mot_highway.yaml
@@ -1,15 +1,15 @@
-OUTPUT_DIR: "output/mot_highway"
+OUTPUT_DIR: "/kaggle/working/vehicle_mtmc/output/mot_highway"
 FONTSIZE: 11
 MOT:
-  VIDEO: "datasets/camera-3.mp4"
-  REID_MODEL_OPTS: "models/resnet50_mixstyle/opts.yaml"
-  REID_MODEL_CKPT: "models/resnet50_mixstyle/net_19.pth"
-  CALIBRATION: "config/examples/highway_calibration.txt"
+  VIDEO: /kaggle/working/vehicle_mtmc/datasets/cam-1.mp4
+  REID_MODEL_OPTS: "/kaggle/working/vehicle_mtmc/models/resnet50_mixstyle/opts.yaml"
+  REID_MODEL_CKPT: "/kaggle/working/vehicle_mtmc/models/resnet50_mixstyle/net_19.pth"
+  CALIBRATION: "/kaggle/working/vehicle_mtmc/config/examples/highway_calibration.txt"
   REID_FP16: false
   REID_BATCHSIZE: 1
   DETECTOR: "yolov5x6"
   TRACKER: "bytetrack_iou"
-  DETECTION_MASK: "assets/full_white_mask.jpg"
+  DETECTION_MASK: "/kaggle/working/vehicle_mtmc/assets/full_white_mask.jpg"
   SHOW: false
   VIDEO_OUTPUT: true
   TRACKED_CLASSES: [2, 3, 5, 7]
